--- a/index.html
+++ b/index.html
@@ -11,8 +11,33 @@
 
 
 <body>
-   <header></header>
-   <main></main>
+
+   <!-- Code for navigation section -->
+   <header>
+      <nav>
+         <div class="icons">
+            <img src="./images/icons/logo.png" alt="">
+            <h3>Idea</h3>
+         </div>
+
+         <div class="menu">
+            <h4 href="">Home</h4>
+            <h4 href="">About</h4>
+            <h4 href="">Work</h4>
+            <img src="./images/icons/profile.png" alt="">
+         </div>
+      </nav>
+   </header>
+
+
+   <main>
+
+   </main>
+
+
+
+
+   
    <footer></footer>
 </body>
 </html>
