--- a/index.html
+++ b/index.html
@@ -17,21 +17,62 @@
       <nav>
          <div class="icons">
             <img src="./images/icons/logo.png" alt="">
-            <h3>Idea</h3>
+
+            <li class="common">
+               <a target="_blank" href="https://www.w3schools.com/">Idea</a>
+            </li>
+            
+
          </div>
 
          <div class="menu">
-            <h4 href="">Home</h4>
-            <h4 href="">About</h4>
-            <h4 href="">Work</h4>
+           <li class="common">
+              <a target="_blank" href="">Home</a>
+           </li>
+           <li class="common">
+              <a target="_blank" href="">About</a>
+           </li>
+           <li class="common">
+              <a target="_blank" href="">Works</a>
+           </li>
             <img src="./images/icons/profile.png" alt="">
          </div>
       </nav>
    </header>
 
-
    <main>
+      <!-- Top players -->
+      <section class="players-container">
+         <div class="player-details">
+            <img src="./images/players/player-1.png" alt="">
+            <h3>John</h3>
+         </div>
 
+         <div class="player-details">
+            <img src="./images/players/player-2.png" alt="">
+            <h3>Abraham</h3>
+         </div>
+
+         <div class="player-details">
+            <img src="./images/players/player-3.png" alt="">
+            <h3>Linkon</h3>
+         </div>
+
+         <div class="player-details">
+            <img src="./images/players/player-4.png" alt="">
+            <h3>Mules</h3>
+         </div>
+
+         <div class="player-details">
+            <img src="./images/players/player-5.png" alt="">
+            <h3>Abraham</h3>
+         </div>
+
+         <div class="player-details">
+            <img src="./images/players/player-6.png" alt="">
+            <h3>Muller</h3>
+         </div>
+      </section>
    </main>
 
 
