--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
    <title>Leader board</title>
    <!-- css link -->
    <link rel="stylesheet" href="styles/style.css">
-
 </head>
 
 
 <body>
-
    <!-- Code for navigation section -->
    <header class="hide">
       <nav>
@@ -127,20 +125,82 @@
          </div>
       </section>
 
-      
+
       <!-- Code for the latest courses -->
-      <section>
+      <section class="courses" >
+          <h2 class="common-title">Top players</h2>
 
+          <div class="courses-container">
+            <div>
+               <div class="course-title">
+                  <img src="./images/courses/course-1.png" alt="">
+                  <h3>React-The Complete Guide 2020</h3>
+                  <p>Kayen krakoff</p>
+               </div>
+
+               <div class="rating-duration">
+                  <div class="rating-container">
+                     <img src="./images/icons/star.png" alt="">
+                     <img src="./images/icons/star.png" alt="">
+                     <img src="./images/icons/star.png" alt="">
+                     <img src="./images/icons/star.png" alt="">
+                     <span>4.3</span>
+                  </div>
+
+                  <div class="duration-container">
+                     <img src="./images/icons/clock.png" alt="">
+                     <span>01:30 hr</span>
+                  </div>
+               </div>
+            </div>
+
+            <div>
+               <div class="course-title">
+                  <img src="./images/courses/course-3.png" alt="">
+                  <h3>Javascript-The Complete Guide 2020</h3>
+                  <p>Reed krakoff</p>
+               </div>
+
+               <div class="rating-duration">
+                  <div class="rating-container">
+                     <img src="./images/icons/star.png" alt="">
+                     <img src="./images/icons/star.png" alt="">
+                     <img src="./images/icons/star.png" alt="">
+                     <img src="./images/icons/star.png" alt="">
+                     <span>4.5</span>
+                  </div>
+
+                  <div class="duration-container">
+                     <img src="./images/icons/clock.png" alt="">
+                     <span>01:45 hr</span>
+                  </div>
+               </div>
+            </div>
+
+            <div>
+               <div class="course-title">
+                  <img src="./images/courses/course-2.png" alt="">
+                  <h3>Wordpress-The Complete Guide 2020</h3>
+                  <p>Farid Tusher</p>
+               </div>
+
+               <div class="rating-duration">
+                  <div class="rating-container">
+                     <img src="./images/icons/star.png" alt="">
+                     <img src="./images/icons/star.png" alt="">
+                     <img src="./images/icons/star.png" alt="">
+                     <img src="./images/icons/star.png" alt="">
+                     <span>4.9</span>
+                  </div>
+
+                  <div class="duration-container">
+                     <img src="./images/icons/clock.png" alt="">
+                     <span>04:30 hr</span>
+                  </div>
+               </div>
+            </div>
+         </div>
       </section>
-   
-
    </main>
-
-
-
-
-
-   <footer></footer>
 </body>
-
 </html>
