--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Leader board</title>
+   <!-- Font awesome -->
+   <script src="https://kit.fontawesome.com/a43ad9c9d0.js" crossorigin="anonymous"></script>
    <!-- css link -->
    <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -13,7 +15,7 @@
 
 <body>
    <!-- Code for navigation section -->
-   <header class="hide">
+   <header>
       <nav>
          <div class="icons">
             <img src="./images/icons/logo.png" alt="">
@@ -127,7 +129,7 @@
 
 
       <!-- Code for the latest courses -->
-      <section class="courses" >
+      <section class="courses ">
           <h2 class="common-title">Top players</h2>
 
           <div class="courses-container">
